# shift

./: Cargo.toml  README.md
.github/workflows/: test.yml
crates/core/: cli.rs  main.rs  parse.rs
crates/horatius-lib/: Cargo.toml
crates/horatius-lib/src/: lib.rs
crates/shift-lib/: Cargo.toml
crates/shift-lib/src/: lib.rs
crates/shift-lib/src/commands/: event.rs  events.rs  mod.rs  pause.rs  sessions.rs  start.rs  status.rs  stop.rs  tasks.rs  undo.rs
