[package]
name = "horatius"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
path = "crates/core/main.rs"
name = "ht"

[workspace]
members = [
    "crates/horatius-lib"
]

[dependencies]
clap = { version = "4.5.1", features = ["derive"] }
horatius-lib = { version = "0.1.0", path = "crates/horatius-lib" }
