[package]
name = "shift"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
path = "crates/core/main.rs"
name = "st"

[workspace]
members = [
    "crates/shift-lib"
]

[dependencies]
anyhow = "1.0.80"
chrono = { version = "0.4.37", features = ["serde"] }
clap = { version = "4.5.1", features = ["derive"] }
edit = "0.1.5"
serde_json = "1.0.114"
shift-lib = { version = "0.1.0", path = "crates/shift-lib" }
