[package]
name = "shift-lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
chrono = { version = "0.4.34", features = ["serde"] }
rusqlite = { version = "0.31.0", features = ["uuid", "chrono"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
thiserror = "1.0.59"
uuid = { version = "1.7.0", features = ["serde", "v7"] }
